// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FillInTheBlanks to match snapshot 1`] = `
<div
  className="border-b border-gray-500 leading-loose mb-2 px-4 hover:bg-gray-100 cursor-pointer py-8 shadow text-lg"
  data-testid="container"
  onClick={[Function]}
  onMouseOver={[Function]}
>
  The weakest link in our mental model is 
  <span
    className="inline-flex flex-col leading-none"
    data-testid="input-container"
    onClick={[Function]}
  >
    <div
      className="self-center"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <input
        className=""
        data-testid="input"
        onChange={[Function]}
        placeholder="________________"
        style={
          Object {
            "boxSizing": "content-box",
            "width": "1px",
          }
        }
        value=""
      />
      <div
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "scroll",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }
      >
        
      </div>
      <div
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "scroll",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }
      >
        ________________
      </div>
    </div>
    <label
      className="self-center text-sm"
    >
      some assumption
    </label>
  </span>
  . If we’re off -- even by a little -- it could have a big impact on this initiative because 
  <span
    className="inline-flex flex-col leading-none"
    data-testid="input-container"
    onClick={[Function]}
  >
    <div
      className="self-center"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <input
        className=""
        data-testid="input"
        onChange={[Function]}
        placeholder="________________"
        style={
          Object {
            "boxSizing": "content-box",
            "width": "1px",
          }
        }
        value=""
      />
      <div
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "scroll",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }
      >
        
      </div>
      <div
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "scroll",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }
      >
        ________________
      </div>
    </div>
    <label
      className="self-center text-sm"
    >
      reason
    </label>
  </span>
  .
  <span
    className="inline-block ml-3 relative"
    onClick={[Function]}
  >
    <input
      checked={false}
      className="hidden"
      data-testid="reckkQSV8NuHKOAHr"
      id="reckkQSV8NuHKOAHr"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="cursor-pointer"
      htmlFor="reckkQSV8NuHKOAHr"
    >
      <div
        className="w-6 h-3 bg-gray-400 rounded-full shadow-inner"
      />
      <div
        className="toggle__dot absolute w-4 h-4 bg-gray-300 rounded-full shadow inset-y-0 left-0"
      />
    </label>
  </span>
  <button
    className="bg-blue-500 focus:outline-none font-bold font-mono hover:bg-blue-700 ml-3 px-4 rounded-full text-xs text-white"
    data-testid="copy-button"
    onClick={[Function]}
    type="button"
  >
    Copy to clipboard
  </button>
</div>
`;

exports[`FillInTheBlanks toggle 1`] = `
<div>
  <div
    class="border-b border-gray-500 leading-loose mb-2 px-4 hover:bg-gray-100 cursor-pointer py-8 shadow text-lg"
    data-testid="container"
  >
    The weakest link in our mental model is 
    <span
      class="bg-green-200"
    >
      how we perceive user onboarding
    </span>
    . If we’re off -- even by a little -- it could have a big impact on this initiative because 
    <span
      class="bg-green-200"
    >
      our projections might be off
    </span>
    .
    <span
      class="inline-block ml-3 relative"
    >
      <input
        class="hidden"
        data-testid="reckkQSV8NuHKOAHr"
        id="reckkQSV8NuHKOAHr"
        type="checkbox"
      />
      <label
        class="cursor-pointer"
        for="reckkQSV8NuHKOAHr"
      >
        <div
          class="w-6 h-3 bg-gray-400 rounded-full shadow-inner"
        />
        <div
          class="toggle__dot absolute w-4 h-4 bg-gray-300 rounded-full shadow inset-y-0 left-0 toggle__dot--checked"
        />
      </label>
    </span>
    <button
      class="bg-blue-500 focus:outline-none font-bold font-mono hover:bg-blue-700 ml-3 px-4 rounded-full text-xs text-white"
      data-testid="copy-button"
      type="button"
    >
      Copy to clipboard
    </button>
  </div>
</div>
`;

exports[`FillInTheBlanks toggle 2`] = `
<div>
  <div
    class="border-b border-gray-500 leading-loose mb-2 px-4 hover:bg-gray-100 cursor-pointer py-8 shadow text-lg"
    data-testid="container"
  >
    The weakest link in our mental model is 
    <span
      class="inline-flex flex-col leading-none"
      data-testid="input-container"
    >
      <div
        class="self-center"
        style="display: inline-block;"
      >
        <input
          class=""
          data-testid="input"
          placeholder="________________"
          style="box-sizing: content-box; width: 2px;"
          value=""
        />
        <div
          style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
        />
        <div
          style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
        >
          ________________
        </div>
      </div>
      <label
        class="self-center text-sm"
      >
        some assumption
      </label>
    </span>
    . If we’re off -- even by a little -- it could have a big impact on this initiative because 
    <span
      class="inline-flex flex-col leading-none"
      data-testid="input-container"
    >
      <div
        class="self-center"
        style="display: inline-block;"
      >
        <input
          class=""
          data-testid="input"
          placeholder="________________"
          style="box-sizing: content-box; width: 2px;"
          value=""
        />
        <div
          style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
        />
        <div
          style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
        >
          ________________
        </div>
      </div>
      <label
        class="self-center text-sm"
      >
        reason
      </label>
    </span>
    .
    <span
      class="inline-block ml-3 relative"
    >
      <input
        class="hidden"
        data-testid="reckkQSV8NuHKOAHr"
        id="reckkQSV8NuHKOAHr"
        type="checkbox"
      />
      <label
        class="cursor-pointer"
        for="reckkQSV8NuHKOAHr"
      >
        <div
          class="w-6 h-3 bg-gray-400 rounded-full shadow-inner"
        />
        <div
          class="toggle__dot absolute w-4 h-4 bg-gray-300 rounded-full shadow inset-y-0 left-0"
        />
      </label>
    </span>
    <button
      class="bg-blue-500 focus:outline-none font-bold font-mono hover:bg-blue-700 ml-3 px-4 rounded-full text-xs text-white"
      data-testid="copy-button"
      type="button"
    >
      Copy to clipboard
    </button>
  </div>
</div>
`;
